# kr-anomaly-scoring

./: CLAUDE.md  README.md  pyproject.toml
kr_anomaly_scoring/: __init__.py  _scoring.py  beneish_screen.py  cb_bw_timelines.py  run_cb_bw_timelines.py  run_officer_network.py  run_timing_anomalies.py  timing_anomalies.py
tests/: conftest.py  test_scoring.py
