[project]
name = "kr-anomaly-scoring"
version = "1.0.0"
requires-python = ">=3.11"
description = "CB/BW + timing + officer network anomaly scoring for Korean listed companies"
authors = [{name = "pon00050"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["forensic-accounting", "korea", "dart", "anomaly-detection", "convertible-bonds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas",
    "numpy",
    "networkx>=3.0",
    "pyarrow",
    "kr-forensic-core",
]

[project.optional-dependencies]
marimo = [
    "marimo",
    "plotly",
]

[project.urls]
Repository = "https://github.com/pon00050/kr-anomaly-scoring"
Issues = "https://github.com/pon00050/kr-anomaly-scoring/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kr_anomaly_scoring"]

[tool.uv]
compile-bytecode = false

[tool.uv.sources]
kr-forensic-core = { path = "../kr-forensic-core" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
